# MyVukanLearning

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
libs/: CMakeLists.txt
libs/platform/: CMakeLists.txt
libs/platform/include/: platform_export.h
libs/platform/include/plt/: base.h  context.h  platform.h
libs/platform/src/: context.cpp  context_std.cpp  platform.cpp
libs/platform/src/windows/: context_win.cpp  system_error.hpp
libs/vkd/: CMakeLists.txt
libs/vkd/include/vkd/: context.h  core.h  excecution.h  task.h  threadpool.h  window.h  window_export.h
libs/vkd/include/vkd/exception/: system_error.h
libs/vkd/include/vkd/execution/: context.h  env.h  excecution.h  loop.h  operation_state.h  scheduler.h  sender.h  stdexec.h  task.h  threadpool.h
libs/vkd/include/vkd/rhi/: rhi_buffer.h  rhi_command_list.h  rhi_device.h  rhi_graphics_pso.h  rhi_image.h  rhi_shader.h  rhi_texture.h
libs/vkd/include/vkd/window/: window.h
libs/vkd/src/: context.cpp  execution.cpp  system_error.cpp  task.cpp  threadpool.cpp  window.cpp
libs/vkd/src/execution/: context.cpp  execution.cpp  task.cpp
libs/vkd/src/execution/windows/: threadpool.hpp
libs/vkd/src/rhi/: rhi_buffer.cpp  rhi_command_list.cpp  rhi_device.cpp  rhi_image.cpp  rhi_shader.cpp  rhi_texture.cpp
libs/vkd/src/rhi/vulkan/: buffer.hpp  command_list.hpp  config.cpp  config.hpp  device.hpp  image.hpp  shader.hpp  texture.hpp
libs/vkd/src/window/windows/: window.hpp
libs/vkd/src/windows/: system_error.hpp  threadpool_win32.hpp  window.hpp  window_win32.hpp
src/: main.cpp
src/init/: context.cpp  context.h  init.h
test/: main.cpp
